--- a/templates/Test.html
+++ b/templates/Test.html
@@ -8,10 +8,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+    <link
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://calvinmetcalf.github.io/leaflet-ajax/dist/leaflet.ajax.js"></script>
 
 	<style>
 		html, body {
@@ -31,37 +33,49 @@
 <div id='map'></div>
 
 <script>
-	var cities = L.layerGroup();
-	var athens =L.layerGroup();
-
-	L.marker([39.61, -105.02]).bindPopup('This is Littleton, CO.').addTo(cities),
-	L.marker([39.74, -104.99]).bindPopup('This is Denver, CO.').addTo(cities),
-	L.marker([39.73, -104.8]).bindPopup('This is Aurora, CO.').addTo(cities),
-	L.marker([39.77, -105.23]).bindPopup('This is Golden, CO.').addTo(cities),
-    L.marker([33.9486985,-83.3754413]).bindPopup('UGA').addTo(athens);
-
-
 	var mbAttr = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
 			'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
 			'Imagery © <a href="http://mapbox.com">Mapbox</a>',
 		mbUrl = 'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw';
-
 	var streets  = L.tileLayer(mbUrl, {id: 'mapbox.streets',   attribution: mbAttr});
-
 	var map = L.map('map', {
 		center: [39.73, -104.99],
 		zoom: 10,
 		layers: [streets,]
 	});
+	function popUp(f,l){
+    var out = [];
+    if (f.properties){
+        for(key in f.properties){
+            out.push(key+": "+f.properties[key]);
+        }
+        l.bindPopup(out.join("<br />"));
+    }
+}
 
 
 
-	var overlays = {
-		"Cities": cities,
-        "Athens":athens
-	};
+    var metar_group = L.layerGroup();
+	var sigmet_group =L.layerGroup();
+	var aircraft_group = L.layerGroup();
+	var airmet_group = L.layerGroup();
+    var metar = new L.GeoJSON.AJAX(["/metar.JSON"],{onEachFeature:popUp}).addTo(metar_group);
+    var sigmet = new L.GeoJSON.AJAX(["/sigmet.JSON"],{onEachFeature:popUp}).addTo(sigmet_group);
+    var aircraft = new L.GeoJSON.AJAX(["/aircraft.JSON"],{onEachFeature:popUp}).addTo(aircraft_group);
+    var airmet = new L.GeoJSON.AJAX(["/airmet.JSON"],{onEachFeature:popUp}).addTo(airmet_group);
+    var overlays = {
+        "Metar":metar_group,
+        "Sigmet":sigmet_group,
+        "Pilot Reports":aircraft_group,
+        "Airmet":airmet_group
+    };
+    L.control.layers(overlays).addTo(map)
 
-	L.control.layers(overlays).addTo(map);
+
+
+
+
+
 </script>
 
 
