--- a/templates/Test.html
+++ b/templates/Test.html
@@ -8,13 +8,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
-    <link
-
+<!__ Javascript imports __>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://calvinmetcalf.github.io/leaflet-ajax/dist/leaflet.ajax.js"></script>
-
+<!__ sets up the map as the entire web page __>
 	<style>
 		html, body {
 			height: 100%;
@@ -29,20 +28,24 @@
 
 </head>
 <body>
-
+<!__ sets the map divider or section of the document __>
 <div id='map'></div>
-
+<!__ Javascript starts here __>
 <script>
-	var mbAttr = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+	// copy's the open street map data to the site
+    var mbAttr = 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
 			'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
 			'Imagery © <a href="http://mapbox.com">Mapbox</a>',
 		mbUrl = 'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw';
-	var streets  = L.tileLayer(mbUrl, {id: 'mapbox.streets',   attribution: mbAttr});
-	var map = L.map('map', {
-		center: [39.73, -104.99],
-		zoom: 10,
+    // gets the requested tile layer
+    var streets  = L.tileLayer(mbUrl, {id: 'mapbox.streets',   attribution: mbAttr});
+	// declares the map to be interacted on
+    var map = L.map('map', {
+		center: [33.9519, -83.3576],
+		zoom: 7,
 		layers: [streets,]
 	});
+	// function popUp tests if parameter properties and if it does runs a for loop
 	function popUp(f,l){
     var out = [];
     if (f.properties){
@@ -53,22 +56,28 @@
     }
 }
 
-
+// declares the layer groups and uses an ajax request to input the data into the layers
+    // Additionally uses the popup function and adds the geojson layer to the layer group
 
     var metar_group = L.layerGroup();
 	var sigmet_group =L.layerGroup();
 	var aircraft_group = L.layerGroup();
 	var airmet_group = L.layerGroup();
     var metar = new L.GeoJSON.AJAX(["/metar.JSON"],{onEachFeature:popUp}).addTo(metar_group);
-    var sigmet = new L.GeoJSON.AJAX(["/sigmet.JSON"],{onEachFeature:popUp}).addTo(sigmet_group);
+    var sigmet = new L.GeoJSON.AJAX(["/sigmet.JSON"],{onEachFeature:popUp},).addTo(sigmet_group)
     var aircraft = new L.GeoJSON.AJAX(["/aircraft.JSON"],{onEachFeature:popUp}).addTo(aircraft_group);
     var airmet = new L.GeoJSON.AJAX(["/airmet.JSON"],{onEachFeature:popUp}).addTo(airmet_group);
+
+
+
     var overlays = {
+        // defines the overlay control
         "Metar":metar_group,
         "Sigmet":sigmet_group,
         "Pilot Reports":aircraft_group,
         "Airmet":airmet_group
     };
+    // adds the overlay control to the map
     L.control.layers(overlays).addTo(map)
 
 
