--- a/templates/Test.html
+++ b/templates/Test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<!__ required HTML for setting up webpage __>
 	<title>Weather Map</title>
 
 	<meta charset="utf-8" />
